# delta-lake-pipeline

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: az-spark-delta.ipynb  dbutils.py
spark_jobs/batch/: vacuum_data.py
spark_jobs/stream/: extract_raw_event.py  ingest_kafka.py
spark_libs/: base_spark.py  base_transformation.py  data_config.py  log_util.py
spark_libs/schemas/: raw_event.py
